<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.equinor.neqsim</groupId>
	<artifactId>neqsim</artifactId>
	<packaging>jar</packaging>
	<version>${revision}${sha1}${changelist}</version>

	<properties>
		<revision>2.5.32</revision>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<sha1/>
		<changelist/>
		<checkstyle.config.location>checkstyle_neqsim.xml</checkstyle.config.location>
	</properties>

	<repositories>
		<repository>
			<id>central</id>
			<url>https://repo1.maven.org/maven2/</url>
		</repository>
	</repositories>

	<dependencies>
		<!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<version>2.3.230</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>2.23.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.23.1</version>
		</dependency>
		<dependency>
			<groupId>com.thoughtworks.xstream</groupId>
			<artifactId>xstream</artifactId>
			<version>1.4.20</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>5.10.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>colt</groupId>
			<artifactId>colt</artifactId>
			<version>1.2.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>2.6</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-math3</artifactId>
			<version>3.6.1</version>
		</dependency>
		<dependency>
			<groupId>org.ejml</groupId>
			<artifactId>ejml-all</artifactId>
			<version>0.43.1</version>
		</dependency>
		<dependency>
			<groupId>gov.nist.math</groupId>
			<artifactId>jama</artifactId>
			<version>1.0.3</version>
		</dependency>
		<dependency>
			<groupId>org.jfree</groupId>
			<artifactId>jcommon</artifactId>
			<version>1.0.24</version>
		</dependency>
		<dependency>
			<groupId>org.jfree</groupId>
			<artifactId>jfreechart</artifactId>
			<version>1.5.5</version>
		</dependency>
		<dependency>
			<groupId>com.googlecode.matrix-toolkits-java</groupId>
			<artifactId>mtj</artifactId>
			<version>1.0.4</version>
		</dependency>
		<dependency>
			<groupId>org.ojalgo</groupId>
			<artifactId>ojalgo</artifactId>
			<version>53.3.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.11.0</version>
		</dependency>
	</dependencies>
	<profiles>
  		<profile>
   			<id>release</id>
   			<build>
				<plugins>
	 				<plugin>
	  					<groupId>org.sonatype.central</groupId>
	  					<artifactId>central-publishing-maven-plugin</artifactId>
	  					<version>0.5.0</version>
	  					<extensions>true</extensions>
	  					<configuration>
	   						<publishingServerId>central</publishingServerId>
	   						<autoPublish>true</autoPublish>
	  					</configuration>
	 				</plugin>
	 				<plugin>
	  					<groupId>org.apache.maven.plugins</groupId>
	  					<artifactId>maven-source-plugin</artifactId>
	  					<version>3.3.0</version>
	  					<executions>
	   						<execution>
								<id>attach-sources</id>
								<phase>verify</phase>
								<goals>
		 							<goal>jar-no-fork</goal>
								</goals>
	   						</execution>
	  					</executions>
	 				</plugin>
	 				<plugin>
	  					<groupId>org.apache.maven.plugins</groupId>
	  					<artifactId>maven-javadoc-plugin</artifactId>
	  					<version>3.8.0</version>
	  					<executions>
	   						<execution>
								<id>attach-javadoc</id>
								<goals>
		 							<goal>jar</goal>
								</goals>
	   						</execution>
						</executions>
	  					<configuration>
	   						<doclint>none</doclint>
	  					</configuration>
	 				</plugin>
	 				<plugin>
	  					<groupId>org.apache.maven.plugins</groupId>
	  					<artifactId>maven-gpg-plugin</artifactId>
	  					<version>3.2.4</version>
	  					<executions>
	   						<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
		 							<goal>sign</goal>
								</goals>
	   						</execution>
	  					</executions>
	  					<configuration>
	   						<gpgArguments>
								<arg>--pinentry-mode</arg>
								<arg>loopback</arg>
	   						</gpgArguments>
	  					</configuration>
	 				</plugin>
				</plugins>
   			</build>
  		</profile>
 	</profiles>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>3.5.0</version>
				<executions>
					<execution>
						<id>enforce-maven</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>3.8.8</version>
								</requireMavenVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.4.2</version>
				<configuration>
					<archive>
						<manifest>
							<mainClass>neqsim.thermo.util.benchmark.TPflash_benchmark</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>flatten-maven-plugin</artifactId>
				<version>1.6.0</version>
				<configuration>
					<updatePomFile>true</updatePomFile>
				</configuration>
				<executions>
					<execution>
						<id>flatten</id>
						<phase>process-resources</phase>
						<goals>
							<goal>flatten</goal>
						</goals>
					</execution>
					<execution>
						<id>flatten.clean</id>
						<phase>clean</phase>
						<goals>
							<goal>clean</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.6.0</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<release>11</release> <!-- Upgrade jdk version to 11 if you are having issues compiling -->
					<encoding>${project.build.sourceEncoding}</encoding>
					<!-- Uncomment below to get compiler warnings
					<compilerArgs>
						<arg>-Xlint</arg>
					</compilerArgs>
					<showWarnings>true</showWarnings> 
					Uncomment above to get compiler warnings -->
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<show>private</show>
					<nohelp>true</nohelp>
				</configuration>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.3.1</version>
			</plugin>
			<plugin>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>3.3.1</version>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.12</version>
				<configuration>
					<excludes>
						<exclude>neqsim/physicalProperties/util/parameterFitting/**/*</exclude>
						<exclude>neqsim/statistics/util/parameterFitting/**/*</exclude>
						<exclude>neqsim/PVTsimulation/util/parameterfitting/**/*</exclude>
					</excludes>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
					<execution>
						<id>generate-report-after-test</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.3.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>3.4.0</version>
				<configuration>
					<failsOnError>true</failsOnError>
				</configuration>
    		</plugin>  
		</plugins>
	</build>
	<distributionManagement>
		<repository>
			<id>github</id>
			<name>GitHub Equinor Apache Maven Packages</name>
			<url>https://maven.pkg.github.com/Equinor/neqsim</url>
		</repository>
	</distributionManagement>
</project>
